--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
 	<title>erictalle</title>
-	<style>
-		html * {
-			font-family: Courier, Arial, sans-serif;
-		}
-	</style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-	<h1>erictalle</h1>
-	<p>this is where all my interesting stuff will go</p>
+	<div class="container">
+		<br>
+		<h1>erictalle <small>full stack developer / data geek</small></h1>
+		<br>
+		<div class="row">
+			<div class="col-sm-4"><a href="#"><h5>Blog</h5></a></div>
+			<div class="col-sm-4"><a href="#"><h5>Profressional Interests</h5></a></div>
+			<div class="col-sm-4"><a href="#"><h5>Links</h5></a></div>
+		</div>
+		<br><br>
+		<p>this is where all my interesting stuff will go</p>
+	
+	</div>
 </body>
 </html>
