--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
 </head>
 
 <body>
-	<div class="container">
-		<br>
-		<h1>erictalle <small>full stack developer / data geek</small></h1>
-		<br>
-		<div class="row">
-			<div class="col-sm-4"><a href="#"><h5>Blog</h5></a></div>
-			<div class="col-sm-4"><a href="#"><h5>Profressional Interests</h5></a></div>
-			<div class="col-sm-4"><a href="#"><h5>Links</h5></a></div>
+	<div class="container-fluid">
+		<h2>eric talle</h2>
+	</div>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">full stack developer / data geek</a>
+			</div>
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Profressional Interests</a></li>
+				<li><a href="#">Links</a></li>
+			</ul>
 		</div>
+	</nav>
+	<div class="container-fluid">
 		<br><br>
 		<p>this is where all my interesting stuff will go</p>
-	
 	</div>
 </body>
 </html>
